--- a/paytmhelper/build.gradle
+++ b/paytmhelper/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta1'
 
+    implementation 'com.android.volley:volley:1.1.1'
     implementation('com.paytm:pgplussdk:1.3.3') {
         transitive = true;
     }
